test_suite/tests/ui/transparent/at_most_one.stderr
error: #[serde(transparent)] requires struct to have at most one transparent field
 --> tests/ui/transparent/at_most_one.rs:4:1
  |
4 | / #[serde(transparent)]
5 | | struct S {
6 | |     a: u8,
7 | |     b: u8,
8 | | }
  | |_^
